--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 
-  Game Dev for Joseph
+  Game Dev for Joseph (definitely 9/9)
 
 
 
@@ -13,8 +13,8 @@
 
 <br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1a03-forloop-Joseph.html">T1a03-loop-Joseph.HTML<a/>
 <br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1A04-Decisions-Joseph.html">T1A04-Decisions-Joseph>HTML<a/>
-<br><a href="...">...<a/>
-<br><a href="...">...<a/>
+<br><a href="file:///H:/Profile/Desktop/T1A05-LoopsAndDecesion-Joseph.HTML">T1A05-LoopsAndDecisions-Joseph<a/>
+<br><a href="...">Coming Soon<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
