--- a/T1a03-forloop-Joseph.html
+++ b/T1a03-forloop-Joseph.html
@@ -16,23 +16,9 @@
 
                   for (let x=0; x < document.getElementById('myText01').value; x++){
 
-                  document.getElementById('myDiv01').innerHTML += `x is ` + x + `<br>`
+                  document.getElementById('myDiv01').innerHTML += `x is ` + x + `<br>` } }">
 
-
-
-              }
-
-
-
-
-
-
-                    
-                                                                 }">
-
-                      
-
-                <div id="myDiv01">...</div>
+                    <div id="myDiv01">...</div>
 
 
 
