--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <br><a href="https://josephshin7.github.io/game-dev-2018-Joseph/">Joseph github webpages<a/>
 
-<br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1a01-web-joseph.html">T1a01-web-Joseph.HTML<a/>
-<br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1a02-object-array-Joseph.html">T1a02-Array=Joseph.HTML<a/>
+<br><a href="t1a01-web-joseph.html">T1a01-web-joseph.html<a/>
+<br><a href="T1a02-object-array-Joseph.html">T1a02-Array=Joseph.html<a/>
 
-<br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1a03-forloop-Joseph.html">T1a03-loop-Joseph.HTML<a/>
-<br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1A04-Decisions-Joseph.html">T1A04-Decisions-Joseph>HTML<a/>
-<br><a href="file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/T1A05-LoopsAndDecesion-Joseph.HTML">T1A05-LoopsAndDecisions-Joseph<a/>
+<br><a href="T1a03-forloop-Joseph.html">T1a03-loop-Joseph.html<a/>
+<br><a href="T1A04-Decisions-Joseph.html">T1A04-Decisions-Joseph.html<a/>
+<br><a href="T1A05-LoopsAndDecesion-Joseph.htmL">T1A05-LoopsAndDecisions-Joseph.html<a/>
 <br><a href="...">Coming Soon<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
