--- a/T1A05-LoopsAndDecesion-Joseph.HTML
+++ b/T1A05-LoopsAndDecesion-Joseph.HTML
@@ -26,6 +26,9 @@
 
 		        if(x > 100){
                  document.getElementById('myDiv01').innerHTML += '<font color=grey>This Number Is larger Than Hundred, </font><br>'   }
+
+   			if(x == 0){
+                 document.getElementById('myDiv01').innerHTML += '<font color=lightgreen>This Is A Starting Number, </font><br>'   }
 			
 		   		
 		 
