--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <br><a href="T1a03-forloop-Joseph.html">T1a03-loop-Joseph.html<a/>
 <br><a href="T1A04-Decisions-Joseph.html">T1A04-Decisions-Joseph.html<a/>
-<br><a href="T1A05-LoopsAndDecesion-Joseph.htmL">T1A05-LoopsAndDecisions-Joseph.html<a/>
+<br><a href="T1A05-LoopsAndDecesion-Joseph.HTML">T1A05-LoopsAndDecisions-Joseph.html<a/>
 <br><a href="...">Coming Soon<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
