--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <br><a href="T1A05-LoopsAndDecesion-Joseph.HTML">T1A05-LoopsAndDecisions-Joseph.html<a/>
 
 <br><a href="T1a06-functions-joseph.html">T1a06-functions-joseph<a/>
-<br><a href="...">...<a/>
-<br><a href="...">...<a/>
-<br><a href="...">...<a/>
+<br><a href="T1a07-d1-arrays-joseph.html">T1a07-d1-arrays-josephs<a/>
+<br><a href="T1a08-move-image-joseph.html">T1a08-move-image-joseph<a/>
+<br><a href="..."><a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
