--- a/T1A04-Decisions-Joseph.html
+++ b/T1A04-Decisions-Joseph.html
@@ -1,4 +1,8 @@
-				 <h2 align=center>If statements by joseph</h2>
+			
+
+	 <h2 align=center>If statements by joseph</h2>
+
+<body style = "background: url(https://media.istockphoto.com/photos/blue-sky-and-white-clouds-background-picture-id825778252?k=6&m=825778252&s=612x612&w=0&h=VPlp3pwPLCK2fUhhLEO_p-hdQ7Pa1CVtLcAHZBLv4cM=); background-size: 100%">
 
 
 
@@ -11,26 +15,78 @@
 
 
 
-					<input id="myIn" type=text value=2>
+					<input id="myIn" type=text value=77>
 
-		 			<input type=button value="decision if statement" onclick="{ 
+		 			<input type=button value="Spam Click Me To See Rainbows" onclick="{ 
 
 					document.getElementById('myOut').innterHTML = ''
 					x = document.getElementById('myIn').value
 
-			 	if ( x <= 3){
 
-				        document.getElementById('myOut').innerHTML +=
-					'wow the number is less than 3<br>'
 
-				}
 
-				if ( x <= -3){
+
+
+
+
+
+				if ( x <= 1000){
 
 					  document.getElementById('myOut').innerHTML +=
-					'wow the number is less than -3<br>'
+					'<font color=red> This number is less than 1000</font><br>'}
 
-				}
 
-				}">
-					<div id="myOut">...</div>
+
+			 	if ( x <= 7777){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=orange>This number is less than 7777</font><br>'}
+
+
+
+			 	if ( x = 777){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=yellow>This number is a Lucky Number</font><br>'}
+
+
+
+			 	if ( x => 7){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=green>This number is greater than Lucky 7</font><br>'}
+
+
+
+			 	if ( x => 1){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=blue>This number is not a negative number</font><br>'}
+
+
+
+			 	if ( x => 111){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=indigo>This number times 7 = 111</font><br>'}
+
+
+
+			 	if ( x <= 777777 ){
+
+				        document.getElementById('myOut').innerHTML +=
+					'<font color=violet>This number is alot smaller than 777777 </font><br>'}
+
+
+
+
+
+
+
+
+
+
+
+
+}">
+<div id="myOut"></div>
