--- a/t1a01-web-joseph.html
+++ b/t1a01-web-joseph.html
@@ -28,4 +28,182 @@ another line
                  </form>
 
 
+<script> 
+document.write('<img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg" width=500')
+document.getElementById('pic')
+</script>
+<div id="pic">
+</div>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_nYuJGW_e8I" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+
+<div id="myDiv01" ></div>
+<input type=button value="1 to 100 Table" onclick="{
+
+	document.getElementById('myDiv01').innerHTML = ''
+
+
+	let myChart = []
+
+	myChart[0]  = []
+	myChart[1]  = []
+	myChart[2]  = []
+	myChart[3]  = []
+	myChart[4]  = []
+	myChart[5]  = []
+	myChart[6]  = []
+	myChart[7]  = []
+	myChart[8]  = []
+	myChart[9]  = []
+
+
+	myChart[0][0]  = 1	
+	myChart[0][1]  = 2	
+	myChart[0][2]  = 3	
+	myChart[0][3]  = 4
+	myChart[0][4]  = 5	
+	myChart[0][5]  = 6	
+	myChart[0][6]  = 7
+	myChart[0][7]  = 8
+	myChart[0][8]  = 9	
+	myChart[0][9]  = 10	
+	myChart[1][0]  = 11	
+	myChart[1][1]  = 12
+	myChart[1][2]  = 13
+	myChart[1][3]  = 14	
+	myChart[1][4]  = 15	
+	myChart[1][5]  = 16
+	myChart[1][6]  = 17
+	myChart[1][7]  = 18	
+	myChart[1][8]  = 19
+	myChart[1][9]  = 20
+	myChart[2][0]  = 21
+	myChart[2][1]  = 22
+	myChart[2][2]  = 23
+	myChart[2][3]  = 24
+	myChart[2][4]  = 25	
+	myChart[2][5]  = 26	
+	myChart[2][6]  = 27
+	myChart[2][7]  = 28
+	myChart[2][8]  = 29	
+	myChart[2][9]  = 30	
+	myChart[3][0]  = 31
+	myChart[3][1]  = 32
+	myChart[3][2]  = 33
+	myChart[3][3]  = 34
+	myChart[3][4]  = 35	
+	myChart[3][5]  = 36	
+	myChart[3][6]  = 37
+	myChart[3][7]  = 38
+	myChart[3][8]  = 39	
+	myChart[3][9]  = 40	
+	myChart[4][0]  = 41
+	myChart[4][1]  = 42
+	myChart[4][2]  = 43
+	myChart[4][3]  = 44
+	myChart[4][4]  = 45	
+	myChart[4][5]  = 46	
+	myChart[4][6]  = 47
+	myChart[4][7]  = 48
+	myChart[4][8]  = 49	
+	myChart[4][9]  = 50	
+	myChart[5][0]  = 51
+	myChart[5][1]  = 52
+	myChart[5][2]  = 53
+	myChart[5][3]  = 54
+	myChart[5][4]  = 55	
+	myChart[5][5]  = 56	
+	myChart[5][6]  = 57
+	myChart[5][7]  = 58
+	myChart[5][8]  = 59	
+	myChart[5][9]  = 60	
+	myChart[6][0]  = 61
+	myChart[6][1]  = 62
+	myChart[6][2]  = 63
+	myChart[6][3]  = 64
+	myChart[6][4]  = 65	
+	myChart[6][5]  = 66
+	myChart[6][6]  = 67
+	myChart[6][7]  = 68
+	myChart[6][8]  = 69	
+	myChart[6][9]  = 70
+	myChart[7][0]  = 71
+	myChart[7][1]  = 72
+	myChart[7][2]  = 73
+	myChart[7][3]  = 74
+	myChart[7][4]  = 75	
+	myChart[7][5]  = 76	
+	myChart[7][6]  = 77
+	myChart[7][7]  = 78
+	myChart[7][8]  = 79
+	myChart[7][9]  = 80	
+	myChart[8][0]  = 81
+	myChart[8][1]  = 82
+	myChart[8][2]  = 83
+	myChart[8][3]  = 84
+	myChart[8][4]  = 85	
+	myChart[8][5]  = 86	
+	myChart[8][6]  = 87
+	myChart[8][7]  = 88
+	myChart[8][8]  = 89	
+	myChart[8][9]  = 90	
+	myChart[9][0]  = 91
+	myChart[9][1]  = 92
+	myChart[9][2]  = 93
+	myChart[9][3]  = 94
+	myChart[9][4]  = 95	
+	myChart[9][5]  = 96	
+	myChart[9][6]  = 97
+	myChart[9][7]  = 98
+	myChart[9][8]  = 99	
+	myChart[9][9]  = 100	
+
+
+document.getElementById('myDiv01').innerHTML += `    
+	<table border=1>
+	<tr><td>	${myChart[0][0]}  </td><td> ${myChart[0][1]} </td><td> 	 ${myChart[0][2]} </td><td> ${myChart[0][3]} </td><td> ${myChart[0][4]} </td><td> ${myChart[0][5]}
+
+ </td><td> ${myChart[0][6]} </td><td>	 ${myChart[0][7]} </td><td> ${myChart[0][8]}  </td><td> ${myChart[0][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[1][0]}  </td><td> ${myChart[1][1]} </td><td>	 ${myChart[1][2]} </td><td> ${myChart[1][3]} </td><td> ${myChart[1][4]} </td><td> ${myChart[1][5]} 
+
+</td><td> ${myChart[1][6]} </td><td>	 ${myChart[1][7]} </td><td> ${myChart[1][8]}  </td><td> ${myChart[1][9]}	 </tr></td>
+
+	<tr><td>	${myChart[2][0]}  </td><td> ${myChart[2][1]} </td><td>	 ${myChart[2][2]} </td><td> ${myChart[2][3]} </td><td> ${myChart[2][4]} </td><td> ${myChart[2][5]}
+
+ </td><td> ${myChart[2][6]} </td><td>	 ${myChart[2][7]} </td><td> ${myChart[2][8]}  </td><td> ${myChart[2][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[3][0]}  </td><td> ${myChart[3][1]} </td><td>	 ${myChart[3][2]} </td><td> ${myChart[3][3]} </td><td> ${myChart[3][4]} </td><td> ${myChart[3][5]}
+
+ </td><td> ${myChart[3][6]} </td><td>  ${myChart[3][7]} </td><td> ${myChart[3][8]}  </td><td> ${myChart[3][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[4][0]}  </td><td> ${myChart[4][1]} </td><td>	 ${myChart[4][2]} </td><td> ${myChart[4][3]} </td><td> ${myChart[4][4]} </td><td> ${myChart[4][5]}
+
+ </td><td> ${myChart[4][6]} </td><td>	 ${myChart[4][7]} </td><td> ${myChart[4][8]}  </td><td> ${myChart[4][9]}         </tr></td>
+
+	<tr><td>	${myChart[5][0]}  </td><td> ${myChart[5][1]} </td><td> 	 ${myChart[5][2]} </td><td> ${myChart[5][3]} </td><td> ${myChart[5][4]} </td><td> ${myChart[5][5]}
+
+ </td><td> ${myChart[5][6]} </td><td>	 ${myChart[5][7]} </td><td> ${myChart[5][8]}  </td><td> ${myChart[5][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[6][0]}  </td><td> ${myChart[6][1]} </td><td>	 ${myChart[6][2]} </td><td> ${myChart[6][3]} </td><td> ${myChart[6][4]} </td><td> ${myChart[6][5]} 
+
+</td><td> ${myChart[6][6]} </td><td>	 ${myChart[6][7]} </td><td> ${myChart[6][8]}  </td><td> ${myChart[6][9]}	 </tr></td>
+
+	<tr><td>	${myChart[7][0]}  </td><td> ${myChart[7][1]} </td><td>	 ${myChart[7][2]} </td><td> ${myChart[7][3]} </td><td> ${myChart[7][4]} </td><td> ${myChart[7][5]}
+
+ </td><td> ${myChart[7][6]} </td><td>	 ${myChart[7][7]} </td><td> ${myChart[7][8]}  </td><td> ${myChart[7][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[8][0]}  </td><td> ${myChart[8][1]} </td><td>	 ${myChart[8][2]} </td><td> ${myChart[8][3]} </td><td> ${myChart[8][4]} </td><td> ${myChart[8][5]}
+
+ </td><td> ${myChart[8][6]} </td><td>	 ${myChart[8][7]} </td><td> ${myChart[8][8]}  </td><td> ${myChart[8][9]} 	 </tr></td>
+
+	<tr><td>	${myChart[9][0]}  </td><td> ${myChart[9][1]} </td><td>	 ${myChart[9][2]} </td><td> ${myChart[9][3]} </td><td> ${myChart[9][4]} </td><td> ${myChart[9][5]}
+
+ </td><td> ${myChart[9][6]} </td><td>	 ${myChart[9][7]} </td><td> ${myChart[9][8]}  </td><td> ${myChart[9][9]}          </tr></td>
+
+	 </table>`
+}">
+	
+
 
