--- a/T1a09-2D-arrays-joseph.html
+++ b/T1a09-2D-arrays-joseph.html
@@ -1,4 +1,8 @@
-<hw align=center> 2D Arrays by Joseph</h2>
+
+<h2 align=center> 2D Arrays by Joseph</h2>
+
+I copied them like million times.
+
 <div id="myDiv01" ></div>
 <input type=button value="Incase you forgot numbers.." onclick="{
 
@@ -121,7 +125,7 @@
 	myChart[9][9]  = 100	
 
 
-document.getElementById('myDiv01').innerHTML += `
+document.getElementById('myDiv01').innerHTML += `    
 	<table border=1>
 	<tr><td>	${myChart[0][0]}  </td><td> ${myChart[0][1]} </td><td> 	 ${myChart[0][2]} </td><td> ${myChart[0][3]} </td><td> ${myChart[0][4]} </td><td> ${myChart[0][5]}
 
@@ -163,7 +167,7 @@ document.getElementById('myDiv01').innerHTML += `
 
  </td><td> ${myChart[9][6]} </td><td>	 ${myChart[9][7]} </td><td> ${myChart[9][8]}  </td><td> ${myChart[9][9]}          </tr></td>
 
-	</table>`
+	 </table>`
 }">
 	
 
