--- a/T1a09-2D-arrays-joseph.html
+++ b/T1a09-2D-arrays-joseph.html
@@ -1,7 +1,7 @@
 
 <h2 align=center> 2D Arrays by Joseph</h2>
 
-I copied them like million times.
+I did them like million times.
 
 <div id="myDiv01" ></div>
 <input type=button value="Incase you forgot numbers.." onclick="{
