--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <br><a href="T1a07-d1-arrays-joseph.html">T1a07-d1-arrays-josephs<a/>
 <br><a href="T1a08-move-image-joseph.html">T1a08-move-image-joseph<a/>
 <br><a href="T1a09-2D-arrays-joseph.html">T1a09-2D-arrays-joseph<a/>
-<br><a href="T1a10-events-joseph"> if else <a/>
-<br><a href="T1a11-if-else-joseph">if else<a/>
-<br><a href="t1a12-strings-joseph">strings<a/>
-<br><a href="t1a13-math-joseph">math<a/>
-<br><a href="t1a14-passing-to-function">passing ot funcotion<a/>
-<br><a href="t1a15-objects-joseph">Objects<a/>
+<br><a href="T1a10-events-joseph.html">events<a/>
+<br><a href="T1a11-if-else-joseph.html">if else<a/>
+<br><a href="t1a12-strings-joseph.html">strings<a/>
+<br><a href="t1a13-math-joseph.html">math<a/>
+<br><a href="t1a14-passing-to-function.html">passing ot funcotion<a/>
+<br><a href="t1a15-objects-joseph.html">Objects<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
