--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
   Game Dev for Joseph (definitely 9/9)
 
-
-
+ I RE DID REMARK T1a02 - objects - array  I DID BAD ON IT :C
+ I RE DID  REMARK T1a02 - objects - array  I DID BAD ON IT :C
+  I RE DID  REMARK T1a02 - objects - array  I DID BAD ON IT :C
+ I RE DID T1a02 - objects - array  I DID BAD ON IT :C
 
 <br><a href="https://josephshin7.github.io/game-dev-2018-Joseph/">Joseph github webpages<a/>
 
