--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <br><a href="t1a13-math-joseph.html">math<a/>
 <br><a href="t1a14-passing-to-function.html">passing ot funcotion<a/>
 <br><a href="t1a15-objects-joseph.html">Objects<a/>
+<br><a href="t2a01-classes-new-joseph.html">classes new<a/>
 <br><a href="...">...<a/>
-<br><a href="...">...<a/>
-<br><a href="...">...<a/>
+<br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">Coming Soon<a/>
