--- a/t2a01-classes-new-joseph.html
+++ b/t2a01-classes-new-joseph.html
@@ -1,13 +1,13 @@
 
 
 <h2 align=center>Javascript Classes Introduction by Joseph</h2>
-<input type=text id="myNameInput" placeholder="Your Name" value="">
-<input type=text id="myNameInput2" placeholder="Your Age" value="">
-<input type=text id="myNameInput3" placeholder="Your Height" value="">
-<input type=text id="myNameInput4" placeholder="Your Phone Number" value="">
-<input type=text id="myNameInput5" placeholder="Your Social Security #" value="">
-<input type=text id="myNameInput6" placeholder="Your Address" value="">
-<input type=text id="myNameInput7" placeholder="Your Postal Code" value="">
+<input type=text id="myNameInput" placeholder="Your Name" value="Mr.Ellis">
+<input type=text id="myNameInput2" placeholder="Your Age" value="35">
+<input type=text id="myNameInput3" placeholder="Your Height" value="175">
+<input type=text id="myNameInput4" placeholder="Your Phone Number" value="604-342-1111">
+<input type=text id="myNameInput5" placeholder="Your Social Security #" value="149271947">
+<input type=text id="myNameInput6" placeholder="Your Address" value="Mission Secondary">
+<input type=text id="myNameInput7" placeholder="Your Postal Code" value="v2v 6b2">
 
 
 
