--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 <br><a href="t2a01-classes-new-joseph.html">classes new<a/>
 <br><a href="...">...<a/>
 <br><a href="t2a03-spy-joseph.html">spy<a/>
-<br><a href="...">...<a/>
+<br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="...">...<a/>
 <br><a href="...">Coming Soon<a/>
