--- a/t2a01-classes-new-joseph.html
+++ b/t2a01-classes-new-joseph.html
@@ -1,7 +1,7 @@
 
 
 <h2 align=center>Javascript Classes Introduction by Joseph</h2>
-<input type=text id="myNameInput" placeholder="Your Name" value="Mr.Ellis">
+<input type=text id="myNameInput" placeholder="Your Name" value="Gene">
 <input type=text id="myNameInput2" placeholder="Your Age" value="35">
 <input type=text id="myNameInput3" placeholder="Your Height" value="175">
 <input type=text id="myNameInput4" placeholder="Your Phone Number" value="604-342-1111">
