--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br><a href="t1a14-passing-to-function.html">passing ot funcotion<a/>
 <br><a href="t1a15-objects-joseph.html">Objects<a/>
 <br><a href="t2a01-classes-new-joseph.html">classes new<a/>
-<br><a href="...">...<a/>
+<br><a href="t2a02-extend-class-joseph.html">extended class?!!<a/>
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="...">...<a/>
