--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
 <br><a href="t2a02-extend-class-joseph.html">extended class?!!<a/>
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
+<br><a href="t2a08-scoring-joseph.html">AND HE SCORESSSSS-joseph<a/>
+<br><a href="...">...<a/>
+<br><a href="...">...<a/>
+<br><a href="...">...<a/>
+<br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">Coming Soon<a/>
