--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
   Game Dev for Joseph (definitely 9/9)
 <br>
-  I RE DID T1a02 - objects - array  I DID BAD ON IT :C   <br>
- I RE DID T1a02 - objects - array  I DID BAD ON IT :C<br>
- I RE DID T1a02 - objects - array  I DID BAD ON IT :C<br>
- I RE DID T1a02 - objects - array  I DID BAD ON IT :C<br>
+
 
 <br><a href="https://josephshin7.github.io/game-dev-2018-Joseph/">Joseph github webpages<a/>
 
@@ -31,10 +28,10 @@
 <br><a href="t2a02-extend-class-joseph.html">extended class?!!<a/>
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
-<br><a href="t2a08-scoring-joseph.html">AND HE SCORESSSSS-joseph<a/>
+<br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
-<br><a href="...">...<a/>
+<br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris<a/>
 <br><a href="...">Coming Soon<a/>
