--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-
-
-
-  Game Dev for Joseph (definitely 9/9)
+﻿  Game Dev for Joseph (definitely 9/9)
 <br>
 
 
@@ -29,7 +26,7 @@
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
-<br><a href="...">...<a/>
+<br><a href="CONSTRUCT">Construct 2<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
