--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
-<br><a href="CONSTRUCT">Construct 2<a/>
+<br><a href="CONSTRUCT.html">Construct 2<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
