--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
 <br><a href="CONSTRUCT.html">Construct 2<a/>
-<br><a href="...">...<a/>
+<br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris<a/>
