--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
 <br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
-<br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris<a/>
+<br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris-Final Game<a/>
 <br><a href="...">Coming Soon<a/>
