--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
 <br><a href="CONSTRUCT.html">Construct 2<a/>
 <br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
+<br><a href="RealFinalGame.html">Final Game Stage 1<a/>
+<br><a href="RealFinalGame2.html">Final Game Stage 2<a/>
+<br><a href="RealFinalGame3.html">Final Game Stage 3<a/>
+<br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris-Final Game<a/>
