--- a/RealFinalGame2.html
+++ b/RealFinalGame2.html
@@ -33,7 +33,7 @@ let myEnd = new Date().getTime()
 if (myDuration >= 60){alert('HumansWin!')}
 
  if (myHitOther('myImage01','myImage02')){alert('uh...Fleet of Rocket Wins.')} 
- if (myHitOther('myImage01','myImage02')){window.location.href = "file:///C:/Users/1224857/OneDrive%20-%20SCHOOL%20DIST%2075%20(MISSION)/Shin-Joseph-Game-Dev-2018/RealFinalGame3.html";}
+ if (myHitOther('myImage01','myImage02')){window.location.href = "https://josephshin7.github.io/game-dev-2018-Joseph/RealFinalGame3.html";}
 	
 if 		(myEvent.keyCode == 87){document.getElementById('myImage01').style.top = 
 		parseInt(document.getElementById('myImage01').style.top) - 13 + 'px'  //ALIEN
