--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
 <br><a href="CONSTRUCT.html">Construct 2<a/>
 <br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
-<br><a href="https://github.com/JosephShin7/game-dev-2018-Joseph/blob/master/RealFinalGame.html">Final Game Stage 01<a/>
+<br><a href="FinalGame">Final Game Stage 01<a/>
 <br><a href="RealFinalGame2.html">Final Game Stage 2<a/>
 <br><a href="RealFinalGame3.html">Final Game Stage 3<a/>
 <br><a href="...">...<a/>
