--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿  Game Dev for Joseph (definitely 9/9)
+﻿  Game Dev Joseph Shin 2019 
 <br>
 
 
@@ -26,13 +26,13 @@
 <br><a href="t2a03-spy-joseph.html">spy<a/>
 <br><a href="t2a04-movebackground-joseph.html">frontsky...background<a/>
 <br><a href="t2a08-scoring-joseph.html">Scoring-joseph<a/>
-<br><a href="CONSTRUCT.html">Construct 2<a/>
+<br><a href="Construct.html">Construct 2<a/>
 <br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
-<br><a href="FinalGame">Final Game Stage 01<a/>
+<br><a href="FinalGame">Final Game Stage 1<a/>
 <br><a href="RealFinalGame2.html">Final Game Stage 2<a/>
 <br><a href="RealFinalGame3.html">Final Game Stage 3<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
-<br><a href="https://codepen.io/BlueAirplane/pen/wRLrGL?editors=0010">Tetris-Final Game<a/>
-<br><a href="...">Coming Soon<a/>
+<br><a href="...">...<a/>
+<br><a href="...">Coming Soon..<a/>
