--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <br><a href="Construct.html">Construct 2<a/>
 <br><a href="t2a07-magicpyramid-joseph.html">pyramid<a/>
 <br><a href="FinalGame">Final Game Stage 1<a/>
-<br><a href="RealFinalGame2.html">Final Game Stage 2<a/>
+<br><a href="FinalGame2">Final Game Stage 2<a/>
 <br><a href="RealFinalGame3.html">Final Game Stage 3<a/>
 <br><a href="...">...<a/>
 <br><a href="...">...<a/>
