--- a/FinalGame.html
+++ b/FinalGame.html
@@ -1,5 +1,5 @@
 <body id="myBody" style="background-repeat:on-repeat; background-size 100%; " background= "https://www.wallpapermaiden.com/image/2016/08/23/giant-dragon-sky-clouds-sunset-long-tail-fantasy-4774.jpg">
-
+<audio src="https://raw.githubusercontent.com/JosephShin7/game-dev-2018-Joseph/master/avengers-theme.mp3" controls=""> </audio>
 <script>
 function myHitOther(my1,my2){
    left1   = parseInt(document.getElementById(my1).style.left)
